# sc-deployer

./: .gitignore  Cargo.toml  README.md  bootstrap.yaml  catalog.yaml  cli.ps1  cli.sh  profiles.yaml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  product-change.yml  product-feature.yml
.github/workflows/: deploy-dev.yml  deploy-prod.yml  deploy-stage.yml  validate.yml
crates/scd/: Cargo.toml
crates/scd-mcp/: Cargo.toml
crates/scd-mcp/src/: main.rs
crates/scd-mcp/tests/: mcp_smoke.rs
crates/scd/src/: aws.rs  cli.rs  config.rs  deploy.rs  main.rs  manage.rs  project.rs  state.rs
crates/scd/tests/: cli_init.rs  cli_manage.rs  cli_validate_plan.rs
deployer/: catalog.yaml  profiles.yaml  requirements.txt
deployer/scripts/: bootstrap.py  config.py  deploy.py  manage.py
docs/: aws-e2e-test-plan.md
products/api/: CAPABILITY.md  product.yaml  template.yaml
products/database/: CAPABILITY.md  product.yaml  template.yaml
products/networking/: CAPABILITY.md  product.yaml  template.yaml
scripts/: bootstrap.py  config.py  deploy.py  e2e_sandbox.sh  manage.py
skills/: README.md  capability-writer.yaml  deployer.yaml  guide.yaml  implementer.yaml  orchestrator.yaml  pr-reviewer.yaml  release-manager.yaml  requirement-shaper.yaml  test-writer.yaml  work-order-planner.yaml
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_database.py  test_networking.py
tests/unit/: __init__.py  test_api.py  test_database.py  test_networking.py
