[package]
name = "scd"
version = "1.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
time = { version = "0.3", features = ["formatting"] }

# AWS
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-types = "1"
aws-sdk-sts = "1"
aws-sdk-s3 = "1"
aws-sdk-ecr = "1"
aws-sdk-iam = "1"
aws-sdk-servicecatalog = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

